--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -433,11 +433,9 @@ coreos:
             --hostname-override={{ .MasterHostname }} \
             --cluster-dns={{ .K8sClusterDNS }} \
             --cluster-domain=cluster.local \
-            {{ if .IngressLabel }}
             --logtostderr=true \
-            --node-labels=role=ingress
-            {{ else }}
-            --logtostderr=true
+            {{ if .IngressLabel }}
+            --node-labels=role=ingress \
             {{ end }}
             Restart=always
             RestartSec=10
