--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,9 +7,9 @@ apk add --no-cache make git dnsmasq openssl
 
 # Upload Sextant Go programs and retrieve dependencies.
 RUN mkdir -p /go/bin
-COPY cloud-config-server /go/bin/
-COPY addons              /go/bin/
-COPY registry            /go/bin/
+COPY cloud-config-server /
+COPY addons              /
+COPY registry            /
 
 # TODO(yi): Why do we need to create /go/static?
 RUN mkdir /go/static
