--- a/vm-cluster/Vagrantfile
+++ b/vm-cluster/Vagrantfile
@@ -23,7 +23,7 @@ Vagrant.configure("2") do |config|
 
   #定义boostrapper虚拟机
   config.vm.define "bootstrapper" do |bs|
-    bs.vm.box = "coreos-stable"
+    bs.vm.box = "coreos-alpha"
     bs.vm.box_url = "https://storage.googleapis.com/stable.release.core-os.net/amd64-usr/current/coreos_production_vagrant.json" % [$update_channel, $image_version]
     bs.vm.hostname = "bootstrapper"
     #创建内部网卡，便于和其他虚拟机通信
